examples/apimanagement/cluster/v1beta1/gateway.yaml
# SPDX-FileCopyrightText: 2024 The Crossplane Authors <https://crossplane.io>
#
# SPDX-License-Identifier: CC0-1.0

apiVersion: apimanagement.azure.upbound.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: apimanagement/v1beta1/gateway
  labels:
    testing.upbound.io/example-name: example
  name: example-gateway
spec:
  forProvider:
    apiManagementIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example
    description: Example API Management gateway
    locationData:
    - city: example city
      district: example district
      name: example name
      region: example region
